--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,9 @@
 name: Deploy to GitHub Pages
 
 on:
+  # Trigger the workflow every day at a specific time (adjust the cron schedule as needed)
+  schedule:
+    - cron: "0 0 * * *"
   # Trigger the workflow every time you push to the `main` branch
   # Using a different branch name? Replace `main` with your branch’s name
   push:
